<resources>
    <string name="app_name">Messenger Pro</string>
    <string name="title_activity_settings">Messenger Pro Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="pref_category_general">General</string>
    <string name="pref_enable_mpro">Enable Messenger Pro</string>
    <string name="pref_category_text">Text</string>
    <string name="pref_enable_formatting">Enable messages formatting</string>
    <string name="pref_enable_commands">Enable commands</string>
    <string name="pref_send_command_input">Send command input</string>
    <string name="pref_category_image">Image</string>
    <string name="pref_watermark_images">Watermark Images</string>
    <string name="pref_watermark_text">Watermark text</string>
    <string name="pref_watermark_text_size">Watermark text size</string>
    <string name="pref_call_confirmation">Call confirmation</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_double_tap_like">Double tap Like / Emoji button</string>
    <string name="pref_category_about">About</string>
    <string name="pref_about">About Messenger Pro</string>
    <string name="pref_category_conversation">Conversation</string>
    <string name="pref_disable_msg_seen">Prevent message seen indicator</string>
    <string name="pref_enable_conversation_lock">Lockable conversations</string>
    <string name="pref_default_camera">Use default camera app</string>
    <string name="pref_disable_media_transcoder">Disable media transcoder</string>
    <string name="last_message">Message</string>
    <string name="last_message_threadkey">Thread Key</string>
    <string name="last_message_description">The message content</string>
    <string name="last_message_sender_threadkey_description">The Thread Key of the sender</string>
    <string name="last_typing_threadkey">Thread Key</string>
    <string name="last_typing_threadkey_description">The Thread Key of the conversation</string>
    <string name="last_typing_is_typing">Is Typing</string>
    <string name="last_typing_is_typing_description">Did the user start / finish typing ?</string>
    <string name="last_message_id">Message Id</string>
    <string name="last_message_id_description">The unique identifier of the message</string>
    <string name="last_message_sender_threadkey">Sender Thread Key</string>
    <string name="last_message_conv_threadkey">Conversation Thread Key</string>
    <string name="last_message_conv_threadkey_description">The Thread Key of the conversation</string>
    <string name="last_typing_userkey_description">The User Key of the person typing</string>
    <string name="last_typing_userkey">User Key</string>
    <string name="pref_disable_typing_indicator">Prevent typing indicator</string>
    <string name="pref_allow_logs">Allow verbose logs</string>
    <string name="title_activity_about">About Messenger Pro</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="placeholder_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="pref_features">Features</string>
    <string name="pref_toolbar">Toolbar</string>
    <string name="pref_toolbar_message_formatting">Format Messages</string>
    <string name="pref_toolbar_message_seen">Prevent Seen Indicator</string>
    <string name="pref_toolbar_message_typing">Prevent Typing Indicator</string>
    <string name="pref_toolbar_message">Message</string>
    <string name="pref_toolbar_conv">Conversation</string>
    <string name="pref_toolbar_conv_attach">Attach File</string>
    <string name="pref_toolbar_conv_lock">Lock Conversation</string>
    <string name="pref_toolbar_conv_threadkey">Copy ThreadKey</string>
    <string name="pref_toolbar_settings">Settings</string>
    <string name="pref_features_summary">Customize Messenger Pro features</string>
    <string name="pref_toolbar_summary">Tweak toolbar elements</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_unobfuscator">Unobfuscated components</string>
    <string name="pref_apicodes">API codes</string>
    <string name="threadkey_copied">ThreadKey copied to clipboard</string>
    <string name="please_enable_lock">Please enable \"Lockable conversations\" feature in settings</string>
    <string name="please_enable_translate">Please enable \"Messages Translation\" feature in settings</string>
    <string name="please_enable_theme">Please enable \"Custom Color Theme\" feature in settings</string>
    <string name="threadkey_required">Please enter a conversation</string>
    <string name="support_patreon">Support me on Patreon</string>
    <string name="github_page">Github Page</string>
    <string name="telegram_support">Telegram Support</string>
    <string name="reaction">Reaction</string>
    <string name="message_id">Message Id</string>
    <string name="threadkey">Thread Key</string>
    <string name="confirm">Confirm</string>
    <string name="message">Message</string>
    <string name="reply_message_id">Reply Message Id</string>
    <string name="optional_parenthesis">(optional)</string>
    <string name="add">Add</string>
    <string name="unexpected_error">An unexpected error occured</string>
    <string name="no_pronunciation">Unable to find pronunciation</string>
    <string name="need_install_module">Messenger Pro module app missing</string>
    <string name="failed_load_module">Failed to load Messenger Pro. Please check module logs in LSPosed for more details.</string>
    <string name="pref_hookstate">Hooks state</string>
    <string name="reset">Reset</string>
    <string name="too_old_version">Please update it to messenger V%s, or expect some features to break because your messenger version is too old.</string>
    <string name="too_new_version">Please downgrade it to messenger V%s, or expect some features to break because your messenger version is too new.</string>
    <string name="warning_dialog_title">Messenger Pro Warning</string>
    <string name="error_dialog_title">Messenger Pro Error</string>
    <string name="patreon_popup_message">Hey there! If you find value in using Messenger Pro, please consider supporting me on Patreon. Your support helps me continue improving and adding new features to the app. Thank you!</string>
    <string name="take_me">Take me!</string>
    <string name="dont_show_again">Don\'t show</string>
    <string name="later">Later</string>
    <string name="welcome_to_mpro_message">Welcome To Messenger Pro!\nPlease refer to our Usage Guide if you don\'t know how to start.\nEnjoy 😎</string>
    <string name="pref_toolbar_summon">Summon Toolbar</string>
    <string name="pref_toolbar_summon_fingers">Fingers Count</string>
    <string name="pref_toolbar_summon_direction">Swipe Direction</string>
    <string name="pref_toolbar_summon_edge">From Edge</string>
    <string name="use_multi_finger_to_disable">Select more than 1 finger to disable</string>
    <string name="pref_other_settings_longpress_top">Launch settings by long pressing on top</string>
    <string name="feature_prevent_seen_description">Prevents seen indicator when enabled</string>
    <string name="feature_info">Feature Info</string>
    <string name="feature_prevent_typing_indicator">Prevents typing indicator when enabled</string>
    <string name="feature_message_formatting">Enables formatting of messages when enabled</string>
    <string name="feature_launch_settings">Launches Messenger Pro settings</string>
    <string name="feature_copy_threadkey">Copies the active conversation thread key</string>
    <string name="feature_conv_lock">Locks the active conversation</string>
    <string name="feature_attach_file">Attaches any file to the active conversation</string>
    <string name="deobfuscation_loading_title">Loading Messenger Pro</string>
    <string name="deobfuscation_loading_message">Deobfuscating components</string>
    <string name="feature_conv_translate">Translates sent/received messages in a conversation</string>
    <string name="source_language">Source Language</string>
    <string name="target_language">Target Language</string>
    <string name="sent_messages">Sent Messages</string>
    <string name="received_messages">Received Messages</string>
    <string name="save">Save</string>
    <string name="translate">Translate</string>
    <string name="pref_toolbar_conv_translate">Translate Messages</string>
    <string name="pref_enable_translation">Messages translation</string>
    <string name="translation_error">Translation error</string>
    <string name="keep_original_message">Keep original message</string>
    <string name="disabling_hook">Disabling hook %s due to error, please check logs for more details. All related features will stop working</string>
    <string name="camera_need_permission">Unable to launch default camera, please grant camera permission first from messenger camera</string>
    <string name="feature_color_theme">Customizes messenger color theme</string>
    <string name="theme">Theme</string>
    <string name="pref_category_ui">User Interface</string>
    <string name="pref_color_theme">Custom color theme (experimental)</string>
    <string name="pref_adblocker">Block ads</string>
    <string name="apply">Apply</string>
    <string name="invalid_color">Invalid Color</string>
    <string name="pref_aiconfig">Configure AI (not working)</string>
    <string name="pref_aiconfig_provider">Model</string>
    <string name="pref_aiconfig_auth">Authentication Data</string>
    <string name="need_install_aiplugin">AI Plugin is not installed</string>
    <string name="pref_allow_other_command">Enable other people to use commands</string>
    <string name="pref_color_theme_force">Apply color theme inside conversations</string>
</resources>