<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_general_key"
        android:title="@string/pref_category_general"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="mpro_enabled"
            android:title="@string/pref_enable_mpro" />
    <PreferenceCategory
        android:key="category_text_key"
        android:title="@string/pref_category_text"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="mpro_text_format"
            android:title="@string/pref_enable_formatting" />
    <PreferenceCategory
        android:key="category_command_key"
        android:title="Commands"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="mpro_commands"
            android:title="@string/pref_enable_commands" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="mpro_commands_dont_send"
            android:title="@string/pref_send_command_input" />
        <EditTextPreference
            android:defaultValue=""
            android:key="mpro_commands_openai_api_token"
            android:title="@string/pref_openai_api_token"
            app:summary="Press to configure your api token"/>
    <PreferenceCategory
        android:key="category_image_key"
        android:title="@string/pref_category_image" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="mpro_image_watermark"
            android:title="@string/pref_watermark_images" />
        <EditTextPreference
            android:enabled="false"
            android:defaultValue="Messenger Pro"
            android:key="mpro_image_watermark_text"
            android:title="@string/pref_watermark_text" />
        <SeekBarPreference
            android:enabled="false"
            android:defaultValue="50"
            android:max="200"
            android:key="mpro_image_watermark_text_size"
            android:title="@string/pref_watermark_text_size" />
    <PreferenceCategory
        android:key="category_other_key"
        android:title="@string/pref_category_other" />
        <SwitchPreference
            android:enabled="true"
            android:title="@string/pref_call_confirmation"
            android:key="mpro_other_call_confirmation"
            android:defaultValue="true" />
        <SwitchPreference
            android:enabled="true"
            android:title="@string/pref_double_tap_like"
            android:key="mpro_other_double_tap_emoji"
            android:defaultValue="false" />
    <PreferenceCategory
        android:key="category_about_key"
        android:title="@string/pref_category_about" />
        <Preference
            android:title="@string/pref_github_page"
            android:key="mpro_about" />
</PreferenceScreen>